force-app/main/default/objects/MaintenanceTask__x/MaintenanceTask__x.object-meta.xml
<CustomObject>
    <description>mtask</description>
    <externalDataSource>Nadim_oData</externalDataSource>
    <externalName>mtask</externalName>
    <label>Maintenance Task</label>
    <pluralLabel>Maintenance Tasks</pluralLabel>
</CustomObject>