force-app/main/default/objects/MaintenanceTask__x/fields/asset_fkey__c.field-meta.xml
<CustomField>
    <fullName>asset_fkey__c</fullName>
    <description>asset_fkey</description>
    <externalDeveloperName>asset_fkey</externalDeveloperName>
    <label>Asset_fkey</label>
    <length>128</length>
    <type>Text</type>
</CustomField>