force-app/main/default/objects/MaintenanceTask__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>_id</description>
    <externalDeveloperName>_id</externalDeveloperName>
    <label>_id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>