force-app/main/default/objects/MaintenanceTask__x/fields/taskname__c.field-meta.xml
<CustomField>
    <fullName>taskname__c</fullName>
    <description>taskname</description>
    <externalDeveloperName>taskname</externalDeveloperName>
    <label>Taskname</label>
    <length>128</length>
    <type>Text</type>
</CustomField>