force-app/main/default/objects/MaintenanceTask__x/fields/tasknotes__c.field-meta.xml
<CustomField>
    <fullName>tasknotes__c</fullName>
    <description>tasknotes</description>
    <externalDeveloperName>tasknotes</externalDeveloperName>
    <label>Tasknotes</label>
    <length>128</length>
    <type>Text</type>
</CustomField>