force-app/main/default/objects/MaintenanceTask__x/fields/taskpriority__c.field-meta.xml
<CustomField>
    <fullName>taskpriority__c</fullName>
    <description>taskpriority</description>
    <externalDeveloperName>taskpriority</externalDeveloperName>
    <label>Taskpriority</label>
    <length>128</length>
    <type>Text</type>
</CustomField>