force-app/main/default/objects/MaintenanceTask__x/fields/taskschedule__c.field-meta.xml
<CustomField>
    <fullName>taskschedule__c</fullName>
    <description>taskschedule</description>
    <externalDeveloperName>taskschedule</externalDeveloperName>
    <label>Taskschedule</label>
    <type>Date</type>
</CustomField>