force-app/main/default/objects/MaintenanceTask__x/fields/taskstatus__c.field-meta.xml
<CustomField>
    <fullName>taskstatus__c</fullName>
    <description>taskstatus</description>
    <externalDeveloperName>taskstatus</externalDeveloperName>
    <label>Taskstatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>