force-app/main/default/objects/MaintenanceTask__x/fields/technician_fkey__c.field-meta.xml
<CustomField>
    <fullName>technician_fkey__c</fullName>
    <description>technician_fkey</description>
    <externalDeveloperName>technician_fkey</externalDeveloperName>
    <label>Technician</label>
    <length>128</length>
    <referenceTargetField>Asset__c.AssetCode__c</referenceTargetField>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Maintenance Tasks</relationshipLabel>
    <relationshipName>Maintenance_Tasks1</relationshipName>
    <type>IndirectLookup</type>
</CustomField>